fixed img overflow in viewer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,9 +21,16 @@ a {
 
 .map-col {
   width: 100%;
+  height: 100%;
   max-height: 90%;
   padding-left: 5px !important;
   padding-right: 5px !important; }
+
+.r6-map-img {
+  max-width: auto;
+  max-height: 100% !important;
+  display: block;
+  float: left; }
 
 .r6-row {
   height: 100%; }
